# gazebo_terrain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_temp.txt  delete_model.sh  image_resize.py  model_config_gen.py  model_sdf_gen.py  package.xml  sdf_temp.txt  terrain_gen.sh
gazeboterrain/: image_resize.py  model.py  model_config_gen.py  model_sdf_gen.py
scripts/: delete.py  image_resize.py  main.py  model.py  template.py  world.py
scripts/templates/: launch_temp.txt  name_world_launch_temp.txt  name_world_temp.txt  sdf_temp.txt  world_launch_temp.txt  world_temp.txt
src/: delete_model.sh  launch_gui.sh  terrain_gen.sh
