<?xml version="1.0"?>
<package format="3">
  <name>gazebo_terrain</name>
  <version>0.0.0</version>
  <description>
    A simple automatic terrain model generator for Gazebo
  </description>

  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>

  <license file="LICENSE">BSD</license>

  <url type="website">https://github.com/MatthewVerbryke/gazebo_terrain</url>
  
  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-pil.imagetk</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
